fix bugs with img size and text align

--- a/src/blocks/feedback/feedback.css
+++ b/src/blocks/feedback/feedback.css
@@ -55,8 +55,15 @@
     color: #c11c56;
 }
 
-.feedback__submit:hover{
+.feedback__submit:not(.feedback__submit_disabled):hover{
     color: #7367f0;
+}
+
+.feedback__submit_disabled{
+    background: #ccc;
+    color: #000;
+    opacity: 0.5;
+    outline: none;
 }
 
 #feedback__agree{
